@@ -175,6 +175,180 @@
 									<type>jar</type>
 									<outputDirectory>target/dependencies/launcher</outputDirectory>
 								</artifactItem>
+								
+								<!-- JavaFX Mac -->
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-base</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+    								<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-controls</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-fxml</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-graphics</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-media</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-swing</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-web</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>mac</classifier>
+									<outputDirectory>target/dependencies/openjfx/mac</outputDirectory>
+								</artifactItem>
+								
+								<!-- JavaFX Linux -->
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-base</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+    								<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-controls</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-fxml</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-graphics</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-media</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-swing</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-web</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>linux</classifier>
+									<outputDirectory>target/dependencies/openjfx/linux</outputDirectory>
+								</artifactItem>
+								
+								<!-- JavaFX Windows -->
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-base</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+    								<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-controls</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-fxml</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-graphics</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-media</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-swing</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.openjfx</groupId>
+    								<artifactId>javafx-web</artifactId>
+    								<version>11</version>
+    								<type>jar</type>
+									<classifier>win</classifier>
+									<outputDirectory>target/dependencies/openjfx/win</outputDirectory>
+								</artifactItem>
 							</artifactItems>
 						</configuration>
 					</execution>
@@ -434,8 +608,11 @@
 									<value />
 								</replacement>
 								<replacement>
-									<token>lib/endorsed/org.apache.karaf.specs</token>
-									<value>$KARAF_HOME/lib/endorsed/org.apache.karaf.specs</value>
+									<token>--patch-module java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-${karaf.version}.jar \</token>
+									<value>--patch-module java.xml=$KARAF_HOME/lib/endorsed/org.apache.karaf.specs.java.xml-${karaf.version}.jar \
+                    -p $KARAF_HOME/lib/openjfx/$JAVAFX_DIR \
+                    --add-modules javafx.base,javafx.swing,javafx.media,javafx.web \
+									</value>
 								</replacement>
 							</replacements>
 						</configuration>
@@ -485,12 +662,15 @@
 									<value />
 								</replacement>
 								<replacement>
-									<token>lib/endorsed/org.apache.karaf.specs.locator-4.2.1.jar</token>
-									<value>"%KARAF_HOME%/lib/endorsed/org.apache.karaf.specs.locator-4.2.1.jar"</value>
+									<token>lib/endorsed/org.apache.karaf.specs.locator-${karaf.version}.jar</token>
+									<value>"%KARAF_HOME%/lib/endorsed/org.apache.karaf.specs.locator-${karaf.version}.jar"</value>
 								</replacement>
 								<replacement>
-									<token>lib/endorsed/org.apache.karaf.specs.java.xml-4.2.1.jar</token>
-									<value>"%KARAF_HOME%/lib/endorsed/org.apache.karaf.specs.java.xml-4.2.1.jar"</value>
+									<token>--patch-module java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-${karaf.version}.jar ^</token>
+									<value>--patch-module java.xml="%KARAF_HOME%/lib/endorsed/org.apache.karaf.specs.java.xml-${karaf.version}.jar" ^
+                -p "%KARAF_HOME%/lib/openjfx/win/" ^
+                --add-modules javafx.base,javafx.swing,javafx.media,javafx.web ^
+									</value>
 								</replacement>
 							</replacements>
 						</configuration>
